# 42-fly_in

./: .gitignore  pyproject.toml
src/: __main__.py  display.py  main.py  parser.py  parsing.py  solver.py
src/classes/: Exceptions.py  Models.py
